syntax = "proto3";

package my_service;

import "messages.proto";

service MyService {
  rpc Greet(my_messages.GreetingRequest) returns (my_messages.Greeting) {}
}
